WP.org P2 child theme: Prevent handbook name from triggering vertical scrollbar on hover.
Fixes #740.
Props Clorith.



git-svn-id: https://meta.svn.wordpress.org/sites/trunk@1214 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-p2/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-p2/style.css
@@ -195,10 +195,11 @@ li.type-handbook h4 {
 	color: #aaa;
 	margin-left: -225px;
 	margin-right: 14px;
-	overflow-x: hidden;
+	overflow: hidden;
 	letter-spacing: 2px;
 	font-size: 1.5em;
 	text-transform: uppercase;
+	border-bottom: 0;
 }
 .handbook-name span {
 	display: inline-block;
